--- a/ChristmasInThePark/res/values/strings.xml
+++ b/ChristmasInThePark/res/values/strings.xml
@@ -8,6 +8,6 @@
     <string name="Map">Map</string>
     <string name="Vote">Vote</string>
     <string name="AboutUs">About Us</string>
-    <string name="Introduction">About Us</string>
+    <string name="Introduction">\n Christmas in the Park is an annual holiday tradition that takes place in the heart of Downtown San José at the Plaza de Cesar Chavez. For over 30 years, this whimsical event has brought people from all over the Bay Area together during the holidays. \n\n Christmas in the Park is a non-profit organization that is supported through fundraising efforts and is free to the public. Children can have their photograph taken with Santa, watch nightly entertainment and enjoy holiday themed refreshments.</string>
 
 </resources>
