--- a/ChristmasInThePark/res/values/strings.xml
+++ b/ChristmasInThePark/res/values/strings.xml
@@ -10,10 +10,8 @@
     <string name="Vote">Vote</string>
     <string name="AboutUs">About Us</string>
     
-    
-    
-    
-    <string name="Introduction">\n Christmas in the Park is an annual holiday tradition that takes place in the heart of Downtown San José at the Plaza de Cesar Chavez. For over 30 years, this whimsical event has brought people from all over the Bay Area together during the holidays. \n\n Christmas in the Park is a non-profit organization that is supported through fundraising efforts and is free to the public. Children can have their photograph taken with Santa, watch nightly entertainment and enjoy holiday themed refreshments.</string>
-    <string name="Contact">\n Executive Director: Jason Minsky\n Exhibit Designer: Tom Trafton\n Program Manager: Shelley Romeo\n\n Info: (408) 200 3800\n Office: 1(408)297 XMAS (9627)\n Fax: 1(408) 516 9792\n\n Address:\n Christmas in the Park\n 101 West Santa Clara Street\n San Jose, CA 95113\n\n Email: info@christmasinthepark.com\n</string>
-<string name="Sponsor">\n If you are interested in becoming a sponsor please tell us about yourself. Send us an email with your contact information and a brief message and someone will contact you with more information.</string>
+    <string name="Introduction">\nChristmas in the Park is an annual holiday tradition that takes place in the heart of Downtown San José at the Plaza de Cesar Chavez. For over 30 years, this whimsical event has brought people from all over the Bay Area together during the holidays. \n\nChristmas in the Park is a non-profit organization that is supported through fundraising efforts and is free to the public. Children can have their photograph taken with Santa, watch nightly entertainment and enjoy holiday themed refreshments.</string>
+    <string name="Contact">\nExecutive Director: Jason Minsky\nExhibit Designer: Tom Trafton\nProgram Manager: Shelley Romeo</string>
+    <string name="office">Office: 1(408)297 XMAS (9627)\nFax: 1(408) 516 9792\n\nAddress:\nChristmas in the Park\n101 West Santa Clara Street\nSan Jose, CA 95113\n\nEmail: info@christmasinthepark.com</string>
+<string name="Sponsor">\nIf you are interested in becoming a sponsor please tell us about yourself. Send us an email with your contact information and a brief message and someone will contact you with more information.</string>
 </resources>
