--- a/xmas-app-android/app/src/main/res/values/strings.xml
+++ b/xmas-app-android/app/src/main/res/values/strings.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Christmas in the Park</string>
+    <string name="app_name">Xmas-app-Android</string>
+    <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
 
 </resources>
